// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`per-demo llms.txt routes hello-world demo source matches snapshot 1`] = `
"## Demo: hello-world

### HelloWorld.svelte
\`\`\`svelte
<script>
  import DemoPage from '../../components/DemoPage.svelte';
  import { compiled } from 'mochi-framework';
  import { loadSources } from '../../components/utils.ts';
  import { files } from './files.ts';

  const sources = await compiled(() => loadSources(files));
</script>

<DemoPage title="Hello World" description="The simplest possible Mochi page — a Svelte component rendered on the server with no client-side JavaScript." {sources}>
  <p>Hello, world!</p>
</DemoPage>
\`\`\`

### routes.ts
\`\`\`ts
import { Mochi } from 'mochi-framework';
import type { MochiRouteValue } from 'mochi-framework';

export const routes: Record<string, MochiRouteValue> = {
  '/demos/hello-world': Mochi.page('./src/demos/hello-world/HelloWorld.svelte'),
};
\`\`\`

### index.ts
\`\`\`ts
import { Mochi, logger } from 'mochi-framework';
import { routes } from './routes';

await Mochi.serve({
  port: 3333,
  routes,
});

logger.info('Server running at http://localhost:3333');
\`\`\`
"
`;

exports[`per-demo llms.txt routes cookie-vary-test demo source matches snapshot 1`] = `
"## Demo: cookie-vary-test

### CookieVaryTest.svelte
\`\`\`svelte
<script>
  import DemoPage from '../../components/DemoPage.svelte';
  import { compiled } from 'mochi-framework';
  import { loadSources } from '../../components/utils.ts';
  import { files } from './files.ts';

  const sources = await compiled(() => loadSources(files));
</script>

<DemoPage
  title="Cookie Vary Test"
  description="This page sets Vary: Cookie on every response. The page cache sees this header and emits a s-vary-cookie skip — it refuses to cache the response unless the matching rule explicitly opts in via varyOnCookies."
  {sources}
>
  <p>Check the response headers: <code>Vary: Cookie</code> is set by the route handle.</p>
</DemoPage>
\`\`\`

### routes.ts
\`\`\`ts
import { Mochi } from 'mochi-framework';
import type { Handle, MochiRouteValue } from 'mochi-framework';

export const routes: Record<string, MochiRouteValue> = {
  '/cookie-vary-test': Mochi.page('./src/demos/cookie-vary-test/CookieVaryTest.svelte'),
};

export const handle: Handle = async ({ event, resolve }) => {
  const response = await resolve(event);
  if (event.url.pathname === '/cookie-vary-test' || event.url.pathname === '/cookie-vary-test/') {
    response.headers.set('Vary', 'Cookie');
  }
  return response;
};
\`\`\`

### index.ts
\`\`\`ts
import { Mochi, logger } from 'mochi-framework';
import { routes } from './routes';

await Mochi.serve({
  port: 3333,
  routes,
});

logger.info('Server running at http://localhost:3333');
\`\`\`
"
`;
